--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,14 @@
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <modules>
-    <module>alibaba-nacos-discovery-server</module>
-    <module>alibaba-nacos-discovery-consumer</module>
-    <module>alibaba-nacos-config-client</module>
-    <module>alibaba-nacos-discovery-sentinel</module>
-    <module>alibaba-nacos-discovery-sentinel-data</module>
-    <module>alibaba-nacos-discovery-sentinel-annotation</module>
+    <module>alibaba-nacos-discovery-server</module>       <!--    服务提供者-->
+    <module>alibaba-nacos-discovery-consumer</module> <!--  openfeign webclient resttemplate 消费者-->
+    <module>alibaba-nacos-config-client</module> <!--  //控制中心使用  -->
+    <module>alibaba-nacos-discovery-sentinel</module>  <!--   sentinel使用 -->
+    <module>alibaba-nacos-discovery-sentinel-data</module><!--   sentinel使用nacos存储规则 -->
+    <module>alibaba-nacos-discovery-sentinel-annotation</module><!--   sentinel注解方式使用 -->
+    <module>alibaba-nacos-discovery-dubbo</module><!--   dubbo服务提供者 -->
+    <module>alibaba-nacos-discovery-dubbo-consumer</module><!--   dubbo服务消费者 -->
   </modules>
   <parent>
     <groupId>com.framework</groupId>
